Fix: Changed the sidebar overlapping issue in lower screen sizes

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
   html {
     overflow-x: hidden;
     width: 100%;
+    scroll-behavior: smooth;
   }
   body {
     background-color: var(--color-bg);
